examples/test/testpolicy19063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19063
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key1: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value46
          key48: value11
          key42: value34
      podSelector:
        matchLabels:
          key27: value11
